--- a/index.html
+++ b/index.html
@@ -270,40 +270,85 @@
                 </div>
                 <div class="relative">
                     <div class="absolute inset-0 bg-black/5 rounded-3xl -rotate-1 translate-x-3 translate-y-3"></div>
-                    <div class="relative bg-white p-6 rounded-3xl border border-[#e1e3e5] shadow-xl">
-                        <div class="bg-white rounded-xl p-4">
-                            <h4 class="text-sm font-black text-[#1a1c1d] mb-6">Feed settings</h4>
-                            <div class="space-y-5">
-                                <div class="space-y-1.5">
-                                    <label class="text-xs font-medium text-[#1a1c1d]">Title</label>
-                                    <div
-                                        class="h-9 w-full bg-white border border-[#8a8a8a] rounded-lg px-3 flex items-center text-sm text-[#1a1c1d]">
-                                        We're now on Instagram</div>
+                    <div class="relative space-y-4">
+                        <!-- Top: Slider Preview -->
+                        <div class="bg-white p-6 rounded-3xl border border-[#e1e3e5] shadow-xl overflow-hidden group">
+                            <div class="flex items-center justify-between mb-4">
+                                <span
+                                    class="bg-[#f4f6f8] text-[#1a1c1d] text-[10px] font-bold px-2.5 py-1 rounded-md uppercase tracking-wider">Slider
+                                    Layout</span>
+                                <div class="flex gap-1.5 font-black text-[#ff5a3d]">
+                                    <span class="material-symbols-outlined text-[18px]">chevron_left</span>
+                                    <span class="material-symbols-outlined text-[18px]">chevron_right</span>
                                 </div>
-                                <div class="space-y-1.5">
-                                    <label class="text-xs font-medium text-[#1a1c1d]">Subheading</label>
-                                    <div
-                                        class="h-14 w-full bg-white border border-[#8a8a8a] rounded-lg px-3 py-2 text-sm text-[#1a1c1d] leading-tight">
-                                        Follow us for more</div>
+                            </div>
+                            <div class="flex gap-4">
+                                <div
+                                    class="w-1/3 aspect-square bg-[#f4f6f8] rounded-xl border border-[#eeeeee] overflow-hidden">
+                                    <img src="https://images.unsplash.com/photo-1523275335684-37898b6baf30?w=400&h=400&fit=crop"
+                                        class="w-full h-full object-cover" alt="Product 1">
                                 </div>
-                                <div class="space-y-1.5">
-                                    <label class="text-xs font-medium text-[#1a1c1d]">Button text</label>
-                                    <div
-                                        class="h-9 w-full bg-white border border-[#8a8a8a] rounded-lg px-3 flex items-center text-sm text-[#1a1c1d]">
-                                        Open in Instagram</div>
-                                    <p class="text-[11px] text-[#5c5f62] leading-tight">Shown below posts in preview and
-                                        storefront.</p>
+                                <div
+                                    class="w-1/3 aspect-square bg-[#f4f6f8] rounded-xl border border-[#eeeeee] overflow-hidden">
+                                    <img src="https://images.unsplash.com/photo-1505740420928-5e560c06d30e?w=400&h=400&fit=crop"
+                                        class="w-full h-full object-cover" alt="Product 2">
                                 </div>
-                                <div class="space-y-1.5">
-                                    <label class="text-xs font-medium text-[#1a1c1d]">Feed type</label>
-                                    <div
-                                        class="h-9 w-full bg-white border border-[#8a8a8a] rounded-lg px-3 flex items-center justify-between text-sm text-[#1a1c1d]">
-                                        <span>Slider</span>
-                                        <span
-                                            class="material-symbols-outlined text-[20px] text-[#5c5f62]">unfold_more</span>
-                                    </div>
-                                    <p class="text-[11px] text-[#5c5f62] leading-tight">Grid layout is available on
-                                        Premium plan.</p>
+                                <div
+                                    class="w-1/3 aspect-square bg-[#f4f6f8] rounded-xl border border-[#eeeeee] overflow-hidden">
+                                    <img src="https://images.unsplash.com/photo-1549298916-b41d501d3772?w=400&h=400&fit=crop"
+                                        class="w-full h-full object-cover" alt="Product 3">
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Bottom: Grid Preview -->
+                        <div class="bg-white p-6 rounded-3xl border border-[#e1e3e5] shadow-xl overflow-hidden">
+                            <div class="flex items-center justify-between mb-4">
+                                <span
+                                    class="bg-[#f4f6f8] text-[#1a1c1d] text-[10px] font-bold px-2.5 py-1 rounded-md uppercase tracking-wider">Grid
+                                    Layout</span>
+                                <span class="material-symbols-outlined text-[#5c5f62] text-[18px]">grid_view</span>
+                            </div>
+                            <div class="grid grid-cols-4 gap-3">
+                                <div
+                                    class="aspect-square bg-[#f4f6f8] rounded-lg border border-[#eeeeee] overflow-hidden">
+                                    <img src="https://images.unsplash.com/photo-1491553895911-0055eca6402d?w=200&h=200&fit=crop"
+                                        class="w-full h-full object-cover" alt="Grid 1">
+                                </div>
+                                <div
+                                    class="aspect-square bg-[#f4f6f8] rounded-lg border border-[#eeeeee] overflow-hidden">
+                                    <img src="https://images.unsplash.com/photo-1542291026-7eec264c27ff?w=200&h=200&fit=crop"
+                                        class="w-full h-full object-cover" alt="Grid 2">
+                                </div>
+                                <div
+                                    class="aspect-square bg-[#f4f6f8] rounded-lg border border-[#eeeeee] overflow-hidden">
+                                    <img src="https://images.unsplash.com/photo-1560769629-975ec94e6a86?w=200&h=200&fit=crop"
+                                        class="w-full h-full object-cover" alt="Grid 3">
+                                </div>
+                                <div
+                                    class="aspect-square bg-[#f4f6f8] rounded-lg border border-[#eeeeee] overflow-hidden">
+                                    <img src="https://images.unsplash.com/photo-1525966222134-fcfa99b8ae77?w=200&h=200&fit=crop"
+                                        class="w-full h-full object-cover" alt="Grid 4">
+                                </div>
+                                <div
+                                    class="aspect-square bg-[#f4f6f8] rounded-lg border border-[#eeeeee] overflow-hidden">
+                                    <img src="https://images.unsplash.com/photo-1549298916-b41d501d3772?w=200&h=200&fit=crop"
+                                        class="w-full h-full object-cover" alt="Grid 5">
+                                </div>
+                                <div
+                                    class="aspect-square bg-[#f4f6f8] rounded-lg border border-[#eeeeee] overflow-hidden">
+                                    <img src="https://images.unsplash.com/photo-1511556532299-8f662fc26c06?w=200&h=200&fit=crop"
+                                        class="w-full h-full object-cover" alt="Grid 6">
+                                </div>
+                                <div
+                                    class="aspect-square bg-[#f4f6f8] rounded-lg border border-[#eeeeee] overflow-hidden">
+                                    <img src="https://images.unsplash.com/photo-1581091226825-a6a2a5aee158?w=200&h=200&fit=crop"
+                                        class="w-full h-full object-cover" alt="Grid 7">
+                                </div>
+                                <div
+                                    class="aspect-square bg-[#f4f6f8] rounded-lg border border-[#eeeeee] overflow-hidden">
+                                    <img src="https://images.unsplash.com/photo-1523275335684-37898b6baf30?w=200&h=200&fit=crop"
+                                        class="w-full h-full object-cover" alt="Grid 8">
                                 </div>
                             </div>
                         </div>
